Completed Iteration one

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-396cfe94-4bde-4268-a723-03f7bad6692f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
